--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -2,8 +2,8 @@
   position: absolute;
   top: 150px;
   right: -135px;
-  padding: 0.5rem 0.75rem;
-  gap: 0.5rem;
+  padding: 0.5rem;
+  gap: 0.3rem;
 }
 
 .icon-img {
