--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -1,9 +1,10 @@
 .tooltip-box {
-  position: absolute;
   top: 150px;
-  right: -135px;
+  right: 0.5rem; 
   padding: 0.5rem;
   gap: 0.3rem;
+  max-width: calc(100vw - 1rem); 
+  box-sizing: border-box;
 }
 
 .icon-img {
